@@ -3,6 +3,7 @@
 * N Bug fixes:
   * Fixed prototype detection in C parser.  Can process ruby 1.8 C files
     again.
+  * Fix main page for frameless template.  Patch by Marcin Raczkowski.
 
 === 2.1.0 / 2008-07-20
 
